src/test/ui/unsized-locals/issue-30276-feature-flagged.stderr
error[E0277]: the size for values of type `[i32]` cannot be known at compilation time
  --> $DIR/issue-30276-feature-flagged.rs:6:29
   |
LL |     let _x: fn(_) -> Test = Test;
   |                             ^^^^ doesn't have a size known at compile-time
   |
   = help: within `Test`, the trait `std::marker::Sized` is not implemented for `[i32]`
   = note: required because it appears within the type `Test`
   = note: the return type of a function must have a statically known size

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
